# pyrite-lang

./: .gitignore  CMakeLists.txt  README.md  example.pyrite  test-examples.sh
.github/actions/setup-environment/: action.yml
.github/workflows/: codeql.yml  test.yml
examples/fizzbuzz/: main.pyrite  output.txt
examples/hello/: main.pyrite
examples/structures/: main.pyrite  output.txt
src/: ast.cpp  ast.h  codegen.cpp  codegen.h  error.h  escapes.cpp  escapes.h  helper.h  lexer.cpp  lexer.h  main.cpp  mangle.cpp  mangle.h  optimizations.cpp  optimizations.h  parser.y  rt.c  type.cpp  type.h
